# zk_stack

./: .gitignore  Makefile  README.md  config.example.json  setup.sh
.github/workflows/: documentation.yml
configs/: explorer.config.json  k8s_network.toml  network.toml  portal.config.json
contracts/finance/: MultiVestingWallet.sol
external-node/: en-docker-compose.yml.example
infra/: .gitignore
infra/images/: push-image.sh
infra/scripts/: build_and_push_explorer.sh  prepare_images_for_registry.sh
toolbox/: Dockerfile  Makefile  custom-wallets.yaml  docker-compose.yml  entrypoint.sh
utils/: README.md  bun.lockb  cli.ts  package.json
utils/commands/: cmdDeposit.ts  cmdFixNonce.ts  cmdGetRandomWallet.ts  cmdSendBalance.ts  common.ts  index.ts
utils/health_checker/: .env-example  .gitignore  Makefile  README.md  health_checker.service  package-lock.json  package.json
utils/safe/: Cargo.toml
utils/safe/abi/: Safe.json
utils/safe/src/: cli.rs  lib.rs  main.rs
utils/safe/src/commands/: mod.rs
utils/safe/src/commands/transaction/: execute.rs  mod.rs  propose.rs  sign.rs
utils/safe/src/commands/utils/: balance.rs
utils/safe/src/commands/wallet/: balance.rs  mod.rs  owners.rs  threshold.rs
utils/safe/src/contracts/: safe.rs
utils/scripts/: erc20_abi.json  gasCalculations.ts  geter20.ts  loadTester.ts
utils/test_base_token/: erc20_basic_abi.json  test.ts
vesting_wallet_demo/: .env.example  .gitignore  Makefile  README.md  bun.lockb  package.json
vesting_wallet_demo/contracts/: vesting.sol
vesting_wallet_demo/docs/: safe-cli.md
(+140 files in other folders)
